--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "envalid": "^7.1.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
