--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^5.10.1",
     "morgan": "^1.10.0",
     "pm2": "^5.1.0",
+    "shortid": "^2.2.16",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^4.1.6",
     "ts-jest": "^27.0.3",
@@ -57,6 +58,7 @@
     "@types/mongoose": "^5.10.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.0.1",
+    "@types/shortid": "^0.0.29",
     "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
